@@ -62,3 +62,17 @@ Eligibility does not guarantee immediate collection, and System.gc() is only
 
 a request.
 
+
+
+Command:
+
+java -XX:+UseG1GC -Xms16m -Xmx64m -Xlog:gc GcObserve
+
+
+
+Evidence:
+
+The log began with "Using G1" and showed G1 evacuation pauses.
+
+The collector flag selects G1; it does not guarantee a particular pause time.
+
